--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images\Rien.jpg" alt="Rien Profile Picture" width="170" height="190"></td>
+      <td><img src="images\Rien.jpg" alt="Rien Profile Picture" width="170" height="190"></td>
       <td>
         <h1>Janishrien Velasco</h1>
         <p><em>Application Developer Associate at <strong><a href="https://www.stericycle.ca/">Stericycle Communications</a></strong></em></p>
