--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </tr>
   </table>
   <hr>
-  <a href="Hobbies.html">My Hobbies</a>
-  <a href="Contacts.html">Contact Me Info</a>
+  <a href="hobbies.html">My Hobbies</a>
+  <a href="contacts.html">Contact Me Info</a>
 </body>
 
 </html>
