--- a/hobbies.html
+++ b/hobbies.html
@@ -11,5 +11,7 @@
       <li>Watching Movies</li>
       <li><a href="https://www.facebook.com/photo.php?fbid=1267866796586005&set=t.100000142497618&type=3">Playing basketball</a></li>
     </ol>
+    <br>
+    <a href="index.html">Main Page</a>
   </body>
 </html>
